--- a/.github/workflows/qemu-build.yml
+++ b/.github/workflows/qemu-build.yml
@@ -1,7 +1,7 @@
 name: Build qemu-system-aarch64
 'on':
-  schedule:
-    - cron: 0 0 * * *
+#  schedule:
+#    - cron: 0 0 * * *
 jobs:
   qemu-build:
     runs-on: ubuntu-latest
